<resources>
    <string name="app_name">Connect BCA</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="by_bca">by BCA</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="masuk">Masuk</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="qris">QRIS</string>
    <string name="transfer">Transfer</string>
    <string name="welcome">Selamat Datang</string>
    <string name="logo_content_desc">Logo Connect by BCA</string>
    <string name="tombol_qris">Tombol Qris</string>
    <string name="tombol_wallet">Tombol Wallet</string>
    <string name="tombol_transfer">Tombol Transfer</string>
    <string name="info_icon">Info Icon</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="lihat_nota">Lihat Bukti</string>
    <string name="qris_description">Akses Cepat ke Qris</string>
    <string name="transfer_description">Akses Cepat ke Transfer</string>
    <string name="logo_content_description">Logo Connect by BCA\n</string>
    <string name="back">Back</string>
    <string name="ewallet_description">Akses cepat ke E-Wallet</string>
    <string name="user_id">User ID</string>
    <string name="login_loading_description">Sedang memeriksa akun Anda</string>
    <string name="userid_content_description">Masukkan user id Anda</string>
    <string name="password_description">Masukkan password Anda</string>
    <string name="submit_btn_description">Tekan tombol ini untuk masuk</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="forget_password_alert_message">Segera perbarui kata sandi melalui layanan bank terdekat atau hubungi Customer Service kami melalui email :</string>
    <string name="close_button_text">Tutup</string>
    <string name="cs_email">haloconnect@connect.ac.id</string>
    <string name="close">Tutup</string>
    <string name="share">Bagikan</string>
    <string name="inquiry_mutation_description">Sedang memuat data</string>
    <string name="transaction_name">Name</string>
    <string name="beneficiary_account_name">Beneficiary Name</string>
    <string name="beneficiary_account_number">Number</string>
    <string name="quick_access_feature_not_found">Mohon maaf, fitur akses cepat belum tersedia. Nantikan update fitur terbaru dari kami.</string>
    <string name="home_salutation_text">Hi, Binar Academy</string>
    <string name="home_change_mode_description">Ubah Mode Light atau Dark</string>
    <string name="lihat_notifikasi_description">Tombol Lihat Notifikasi</string>
    <string name="home_main_account_number">145 267 389 5162</string>
    <string name="copy_to_clipboard">Nomor rekening disalin</string>
    <string name="currency">Rp</string>
    <string name="card_balance_hidden">***********</string>
    <string name="account_balance_visibility_description">Klik tombol ini untuk lihat saldo</string>
    <string name="mutasi">Mutasi</string>
    <string name="virtual_account">Virtual\nAccount</string>
    <string name="tombol_mutasi">Tombol mutasi rekening</string>
    <string name="tombol_virtual_account">Tombol virtual account</string>
    <string name="tombol_flazz">Tombol flazz</string>
    <string name="flazz">Flazz</string>
    <string name="info_saldo_toolbar_description">Informasi Saldo dan Rekening</string>
    <string name="customer_bank_card_description">Customer bank card</string>
    <string name="card_deposit_description">Jumlah Pemasukan Bulan Ini</string>
    <string name="card_deposit_month">Bulan Juni</string>
    <string name="month_income_description">Jumlah pemasukan bulan ini</string>
    <string name="month_income">Rp 359.000</string>
    <string name="month_withdrawal_description">Jumlah pengeluaran bulan ini</string>
    <string name="card_withdrawal_month">Bulan Juni</string>
    <string name="month_withdrawal">Rp 359.000</string>
    <string name="bottom_sheet_drag_description">Tarik ke atas untuk melihat mutasi dengan layar penuh</string>
    <string name="tab_layout_description">Pilih mutasi berdasarkan hari ini, bulan ini, atau tanggal</string>
    <string name="balance_inquiry_title">Jumlah Saldo</string>
    <string name="balance_inquiry_value">********</string>
    <string name="customer_card_description">Card berisi informasi kartu rekening</string>
    <string name="account_number">145 267 389 5162</string>
    <string name="account_number_description">Nomor rekening kartu</string>
    <string name="account_number_copy_description">Tombol untuk menyalin nomor rekening</string>
    <string name="card_type">Tahapan Xpresi</string>
    <string name="card_type_description">Jenis kartu tabungan</string>
    <string name="card_expiry_title">EXP</string>
    <string name="card_expiry_date">03/28</string>
    <string name="card_expiry_date_description">Expire date</string>
    <string name="transaction_date">Kamis, 21 Juni 2024</string>
    <string name="transaction_date_description">Transaksi hari ini</string>
    <string name="no_transaction_today">Belum ada transaksi hari ini</string>
    <string name="no_transaction_month">Belum ada transaksi bulan ini.</string>
    <string name="start_date_title">Tanggal Mulai</string>
    <string name="choose_start_date">Pilih tanggal mulai</string>
    <string name="no_mutation">Belum ada transaksi</string>
    <string name="end_date_title">Tanggal Akhir</string>
    <string name="choose_end_date">Pilih tanggal akhir</string>
    <string name="use_same_date">Gunakan periode waktu yang sama</string>
    <string name="use_same_date_description">Centang untuk memilih periode waktu yang sama</string>
    <string name="search_mutation">Cari Mutasi</string>
    <string name="loading_data_description">Sedang memuat data</string>
    <string name="search_again">Cari Lagi</string>
    <string name="show_qr">Tampilkan QR</string>
    <string name="scan_qris">Scan QRIS</string>
    <string name="scan_qris_button_description">Tombol Scan QR</string>
    <string name="show_qr_button_description">Tombol Tampilkan QR</string>
    <string name="flash_on_button_description">Tombol Menyalakan Flash</string>
    <string name="flash_off_button_description">Tombol Mematikan Flash</string>
    <string name="gallery_button_description">Tombol upload kode qr dari galeri</string>
    <string name="qr_logo_description">Gambar Logo QRIS</string>
    <string name="qr_scanner_description">QR Scanner</string>
    <string name="repeat_button_description">Tombol Ulangi</string>
    <string name="qr_not_found">Kode QR tidak ditemukan. Bersihkan lensa Anda dan posisikan kamera dengan tepat.</string>
    <string name="back_to_menu_button_description">Tombol kembali ke menu</string>
    <string name="logo">Logo</string>
    <string name="new_target">Tujuan Baru</string>
    <string name="enter_recipient_data">Masukkan Data Penerima Baru</string>
    <string name="bank_name">Nama Bank Tujuan</string>
    <string name="account_number_title">Nomor Rekening</string>
    <string name="data_loading_description">Sedang memuat data, harap tunggu</string>
    <string name="search_mutation_description">Tekan untuk mulai cari mutasi</string>
    <string name="save_button">Simpan</string>
    <string name="get_date_button_description">Tekan untuk menyimpan pilihan tanggal</string>
    <string name="custom_datepicker_description">Box untuk memilih tanggal</string>
    <string name="balance_inquiry_hidden_description">Jumlah saldo disembunyikan</string>
    <string name="show_qr">Tampilkan QR</string>
    <string name="scan_qris">Scan QRIS</string>
    <string name="scan_qris_button_description">Tombol Scan QR</string>
    <string name="show_qr_button_description">Tombol Tampilkan QR</string>
    <string name="flash_on_button_description">Tombol Menyalakan Flash</string>
    <string name="flash_off_button_description">Tombol Mematikan Flash</string>
    <string name="gallery_button_description">Tombol upload kode qr dari galeri</string>
    <string name="qr_logo_description">Gambar Logo QRIS</string>
    <string name="qr_scanner_description">QR Scanner</string>
    <string name="repeat_button_description">Tombol Ulangi</string>
    <string name="qr_not_found">Kode QR tidak ditemukan. Bersihkan lensa Anda dan posisikan kamera dengan tepat.</string>
    <string name="back_to_menu_button_description">Tombol kembali ke menu</string>
    <string name="logo">Logo</string>
    <string name="new_target">Tujuan Baru</string>
    <string name="enter_recipient_data">Masukkan Data Penerima Baru</string>
    <string name="bank_name">Nama Bank Tujuan</string>
    <string name="account_number_title">Nomor Rekening</string>
    <string-array name="spinner">
        <item>Frekuensi Transfer</item>
        <item>Satu Kali</item>
        <item>Mingguan</item>
        <item>Bulanan</item>
    </string-array>
</resources>