<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical"
    android:elevation="24dp"
    android:outlineAmbientShadowColor="@color/neutral09"
    android:contentDescription="@string/customer_card_description"
    android:padding="12dp"
    app:strokeColor="?attr/colorPrimaryVariant"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp" >

        <LinearLayout
            android:id="@+id/cardNumberLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tvSavingProduct" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvCardNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_number"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:contentDescription="@string/account_number_description"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/iconButtonCopy"
                style="?attr/materialIconButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_copy"
                app:iconTint="?iconTint"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/account_number_copy_description"/>

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvSavingProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_type"
            android:textSize="14sp"
            android:textColor="?android:textColorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardNumberLayout"
            android:contentDescription="@string/card_type_description"/>

        <LinearLayout
            android:id="@+id/expLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/tvSavingProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvExp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorPrimary"
                android:text="@string/card_expiry_title"
                android:textSize="14sp"
                android:contentDescription="@string/card_expiry_date_description"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvExpDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_expiry_date"
                android:textColor="?android:textColorPrimary"
                android:textSize="20sp"
                android:contentDescription="@string/card_expiry_date"/>

        </LinearLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/connect_logo"
            android:scaleType="centerInside"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintTop_toTopOf="@id/expLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/expLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
