<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/topGradient"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="-360dp"
        android:src="@drawable/gradient_login"
        android:contentDescription="@string/logo_content_desc"
        android:background="@drawable/gradient_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/logo_content_desc"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcome" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="24sp"
        android:textColor="?android:textColorPrimary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilPassword"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="14sp"
            android:inputType="textPassword"
            android:hint="@string/kata_sandi"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/masuk"
        app:cornerRadius="12dp"
        android:backgroundTint="?android:buttonTint"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        app:layout_constraintStart_toStartOf="@id/tilPassword"
        app:layout_constraintEnd_toEndOf="@id/tilPassword"
        app:layout_constraintBottom_toTopOf="@id/tvForgotPassword"
        android:layout_marginTop="24dp"/>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lupa_kata_sandi"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/quickButtons"
        android:layout_marginTop="16dp"/>

    <LinearLayout
        android:id="@+id/quickButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        app:layout_constraintBottom_toTopOf="@id/footerBca"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingVertical="14dp"
            android:backgroundTint="?android:buttonTint"
            android:textColor="?attr/colorSurface"
            android:textAllCaps="false"
            android:contentDescription="@string/tombol_wallet"
            app:icon="@drawable/ic_wallet"
            app:iconGravity="textStart"
            app:iconTint="@color/neutral01"
            app:iconSize="32dp"
            app:iconPadding="0dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:paddingVertical="14dp"
            android:backgroundTint="?android:buttonTint"
            android:textColor="?attr/colorSurface"
            android:textAllCaps="false"
            android:contentDescription="@string/tombol_qris"
            app:icon="@drawable/ic_qris"
            app:iconGravity="textStart"
            app:iconTint="@color/neutral01"
            app:iconSize="28dp"
            app:iconPadding="0dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:backgroundTint="?android:buttonTint"
            android:textColor="?attr/colorSurface"
            android:textAllCaps="false"
            android:contentDescription="@string/tombol_transfer"
            app:icon="@drawable/ic_transfer"
            app:iconGravity="textStart"
            app:iconTint="@color/neutral01"
            app:iconSize="28dp"
            app:iconPadding="0dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/footerBca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/by_bca"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/bottomGradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="-70dp"/>

    <ImageView
        android:id="@+id/bottomGradient"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="-340dp"
        android:src="@drawable/gradient_login"
        android:contentDescription="@string/logo_content_desc"
        android:background="@drawable/gradient_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>