<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTintMode="?attr/colorPrimary"
    tools:context=".ui.fragment.transfer.NewDestinationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimaryVariant"
        app:title="Transfer ke Tujuan Baru"
        android:layout_marginBottom="8dp"
        app:titleTextColor="?android:textColorPrimary"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="Transfer ke Tujuan Baru"/>

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/connect_logo_shdw"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tujuan Baru"
        android:textColor="?android:textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/logoImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/new_target"/>

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Masukkan Data Penerima Baru"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/enter_recipient_data"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bankNameButton"
        android:layout_width="262dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:text="Nama Bank Tujuan"
        android:textAlignment="textStart"
        app:cornerRadius="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subtitleTextView"
        android:contentDescription="@string/bank_name"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"  android:layout_width="262dp"  android:layout_height="wrap_content"
        android:id="@+id/accountNumberTextInputLayout"
        android:layout_marginTop="20dp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankNameButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/accountNumberEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number_title"
            android:background="@drawable/background_desc"
            android:inputType="number"
            android:textColor="?attr/colorOnSurface"  android:textSize="16sp"  />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Lanjutkan"
        app:cornerRadius="8dp"
        android:textColor="@color/neutral01"
        android:backgroundTint="@color/colorPrimaryDark"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="Lanjutkan"/>

</androidx.constraintlayout.widget.ConstraintLayout>
